--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git gyakorlás</title>
+    <script src="javascript.js"></script>
 </head>
 <body>
-    <h1>Git Gyakorlás</h1>
     <input type="text" name="input1" id="input1">
     <input type="text" name="input2" id="input2">
+    <button type="button" id="gomb"></button>
+    <p id="visszajelzes"></p>
 </body>
 </html>
