--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <input type="text" name="input1" id="input1">
-    <input type="text" name="input2" id="input2">
-    <button type="button" id="gomb"></button>
+    <button type="button" id="hozzaad">Hozzáad</button>
+    <button type="button" id="kiIr">Kiírás</button>
     <p id="visszajelzes"></p>
 </body>
 </html>
